# QGalleryWidget

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  resources.qrc
example/src/: main.cpp
example/src/buttons/: interactivebuttonbase.cpp
src/: gallerywidget.cpp  gallerywidget.h  interactivebuttonbase.h  waterzoombutton.h
